--- a/sledzie.rmd
+++ b/sledzie.rmd
@@ -122,6 +122,7 @@ processed.data <- processed.data %>% select(-lcop1, -lcop2, -cumf, -xmonth)
 Poniższy wykres przedstawia zależność długości ryby (mierzonej z dokładnością ) od czasu (numeru sekwencyjnego próbki w zbiorze). Dodatkowo, próbki zostały pokolorowane w zależności od `sst` (temperatury przy powierzchni wody) - jaśniejszy odcień koloru niebieskiego oznacza wyższą temperaturę, a u dołu wykresu znajduje sie pasek pozwalający na przełączanie pomiędzy próbkami w momentach, gdy oscylacja północnoatlantycka (atrybut `nao`) osiągał wartości dodatnie, a tymi wykonanymi przy ujemnej wartości tej zmiennej (`nao_range` odpowiednio 1 i -1).
 
 Na wykresie ze względu na wydajność nakreslono co `r freq=35; freq` rekord ze zbioru.
+
 ```{r length_diagram, out.width="100%", fig.height=5, warning=FALSE}
 ggplotly(
   ggplot(processed.data[seq(1, nrow(processed.data), freq), ] %>% mutate(nao_range = sign(nao)), aes(X, length)) +
@@ -132,6 +133,7 @@ ggplotly(
          title = "Długość ryby, czas i temperatura")
 )
 ```
+
 Wizualizacja zdaje się być kolejnym czynnikiem mogącym potwierdzać przypuszczenie o związku temperatury przy powierzchni wody z długością łowionych ryb. W początkowym okresie badania (około 17000 próbek) wartość temperatury wykazywała tendencję spadkową (zilustrowane ciemniejącym odcieniem błękitu punktów), rosły zaś wskazania pomiaru długości ryb. W dalszej części wykresu temperatura przy powierzchni wody rośnie, spadają zaś pomiary długości śledzi.
 
 Trudniejszy do oszacowania wydaje się być wpływ parametru oscylacji północnoatlantyckiej. Jest to zjawisko cykliczne, która to cykliczność polega na okresowej dominacji odczytów dodatnich lub ujemnych - co zresztą znajduje potwierdzenie w wykresie, jeśli spojrzeć na okresowe zagęszczenie próbek dla ujemnego i dodatniego `nao`. Atrybut ten jest też w dość dużym stopniu skorelowany z `sst` - w okresie dominacji ujemnych odczytów `nao` dominują też niższe wartości `sst` i większe długości łowionych śledzi.
@@ -161,17 +163,18 @@ ctrl <- trainControl(
 ```
 
 ### Uczenie metodą Random Forest
-```{r learning, cache = TRUE, warning=FALSE}
+```{r learning, cache = TRUE, warning=FALSE, message=FALSE}
 set.seed(23)
-fit <- train(length ~ ., data = training, method = "rf", trControl = ctrl, verbose = TRUE, importance = TRUE)
+fit <- train(length ~ ., data = training %>% select(-X), method = "rf", trControl = ctrl, verbose = TRUE, importance = TRUE)
 pred <- predict(fit, validation)
 measures = postResample(pred = pred, obs = validation$length)
 rmse <- measures[[1]]
 rsquared <- measures[[2]]
 ```
-Wygenerowany regresor dla zbioru walidującego osiągnął RMSE=`r rmse` i R^2^=`r rsquared`. Biorąc pod uwagę zakres wartości przewidywanej zmiennej `length`, taką wartość pierwiastka błędu średniokwadratowego można uznać za zadowalającą przynajmniej jako początkowy punkt odniesienia do analizy danych. W przypadku osiągniętej wartości R^2^ wyliczony model wyjaśnia około 50% wariancji zmiennej `length` i *około 30%* jej odchylenia standardowego. Nie jest to zatem predyktor zapewniający bardzo wysoką pewność otrzymania prawidłowego rezultatu, niemniej jednak warto wyciągnąć także wniosek z poniższego wykresu.
 
-```{r errplot, cache = TRUE}
+Wygenerowany regresor dla zbioru walidującego osiągnął RMSE=`r rmse` i R^2^=`r rsquared`. Biorąc pod uwagę zakres wartości przewidywanej zmiennej `length`, taką wartość pierwiastka błędu średniokwadratowego można uznać za zadowalającą przynajmniej jako początkowy punkt odniesienia do analizy danych. W przypadku osiągniętej wartości R^2^ wyliczony model wyjaśnia około 50% wariancji zmiennej `length` i *poniżej 30%* jej odchylenia standardowego. Nie jest to zatem predyktor zapewniający bardzo wysoką pewność otrzymania prawidłowego rezultatu, niemniej jednak warto wyciągnąć także wniosek z poniższego wykresu.
+
+```{r errplot}
 ggplot(validation %>% mutate(predicted_length = pred), aes(X, length)) +
   geom_point(aes(color = predicted_length - length)) +
   scale_colour_gradientn(colours = c("red","green",  "blue")) +
@@ -184,9 +187,9 @@ Wykres ten ponownie przedstawia zmienne w czasie zmierzone długości ryb, jedna
 
 ## Ważność atrybutów
 
-```{r importance, warning=FALSE, echo=FALSE, out.width="100%"}
+```{r importance, warning=FALSE, message=FALSE, out.width="100%"}
 importance <- varImp(fit)
 plot(importance)
 ```
-Analiza ważności poszczególnych zmiennych potwierdza wykorzystanie przez predyktor w największym stopniu zmiennej `sst`; druga co do bezwzględnej wartości korelacji zmienna `nao` nie została zaś w ogóle wykorzystana. Pozwala to na potwierdzenie przyjmowanego dotychczas przypuszczenia, że wzrost temperatury przy powierzchni wody ma kluczowe znaczenie dla obserwowanego trendu malejących wymiarów łowionych śledzi.
+Analiza ważności poszczególnych zmiennych potwierdza wykorzystanie przez predyktor w największym stopniu zmiennej `sst`; druga co do bezwzględnej wartości korelacji zmienna `nao` została zaś wykorzystana w niewielkim stopniu. Pozwala to na potwierdzenie przyjmowanego dotychczas przypuszczenia, że wzrost temperatury przy powierzchni wody ma kluczowe znaczenie dla obserwowanego trendu malejących wymiarów łowionych śledzi.
 
